--- a/front/package.json
+++ b/front/package.json
@@ -10,6 +10,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@nextui-org/react": "^2.4.8",
+    "axios": "^1.7.7",
+    "framer-motion": "^11.11.9",
+    "multer": "^1.4.5-lts.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
