--- a/front/package.json
+++ b/front/package.json
@@ -10,12 +10,20 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@mui/icons-material": "^6.1.4",
     "@nextui-org/react": "^2.4.8",
     "axios": "^1.7.7",
+    "cloudinary-video-player": "^2.1.0",
     "framer-motion": "^11.11.9",
     "multer": "^1.4.5-lts.1",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-icons": "^5.3.0",
+    "react-player": "^2.16.0",
+    "react-pro-sidebar": "^1.1.0",
+    "react-router-dom": "^6.27.0",
+    "video.js": "^8.18.1",
+    "videojs-http-source-selector": "^1.1.6"
   },
   "devDependencies": {
     "@eslint/js": "^9.11.1",
