--- a/front/package.json
+++ b/front/package.json
@@ -14,6 +14,8 @@
     "@mui/icons-material": "^6.1.4",
     "@nextui-org/react": "^2.4.8",
     "@reduxjs/toolkit": "^2.3.0",
+    "@stripe/react-stripe-js": "^2.8.1",
+    "@stripe/stripe-js": "^4.9.0",
     "axios": "^1.7.7",
     "cloudinary-video-player": "^2.1.0",
     "dotenv": "^16.4.5",
