--- a/front/package.json
+++ b/front/package.json
@@ -29,6 +29,7 @@
     "react-pro-sidebar": "^1.1.0",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.27.0",
+    "socket.io-client": "^4.8.1",
     "video.js": "^8.18.1",
     "videojs-http-source-selector": "^1.1.6"
   },
