--- a/front/.gitignore
+++ b/front/.gitignore
@@ -8,8 +8,7 @@ pnpm-debug.log*
 lerna-debug.log*
 
 node_modules
-dist
-dist-ssr
+
 *.local
 
 # Editor directories and files
@@ -22,3 +21,4 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
+.env
